--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -22,34 +22,41 @@
             app:popupTheme="@style/Theme.RoomSeller.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
     <ProgressBar
         android:id="@+id/pb_loading"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/bookingDetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/bookingDetail"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:layout_marginBottom="16dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp">
+                android:layout_marginEnd="10dp"
+                android:padding="16dp">
 
                 <TextView
                     android:id="@+id/tv_booking_ref_label"
@@ -88,12 +95,12 @@
 
 
             <com.google.android.material.card.MaterialCardView
+                style="?attr/materialCardViewElevatedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                style="?attr/materialCardViewElevatedStyle">
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="10dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -106,7 +113,7 @@
                         android:id="@+id/tv_check_in_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:text="Check In"
                         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +132,7 @@
                         android:id="@+id/textView8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Check Out"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tv_check_in_label" />
@@ -166,8 +173,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="1dp"
                         android:layout_marginTop="16dp"
-                        android:textColor="@color/white"
                         android:background="@color/stroke_color"
+                        android:textColor="@color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tv_check_in" />
@@ -204,7 +211,7 @@
                         android:id="@+id/imageView3"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tv_num_guests"
                         app:srcCompat="@drawable/person" />
@@ -217,23 +224,64 @@
                 layout="@layout/fragment_room_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="10dp" />
 
             <include
-                layout="@layout/guest_card"
+                android:id="@+id/fragment_booking_summary_info"
+                layout="@layout/fragment_booking_summary_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_room_type" />
-
-
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/stroke_color"
+        app:layout_constraintTop_toBottomOf="@id/scrollView">
+
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:icon="@drawable/ic_forward_to_inbox"
+            android:text="Send Confirmation Email"
+            android:onClick="emailOnClick">
+
+        </com.google.android.material.button.MaterialButton>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            app:icon="@drawable/ic_print"
+            android:text="Print"
+            android:onClick="printOnClick"
+            style="?attr/materialButtonOutlinedStyle">
+
+        </com.google.android.material.button.MaterialButton>
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
-</LinearLayout>
+
