--- a/app/src/main/res/layout/fragment_booking_list.xml
+++ b/app/src/main/res/layout/fragment_booking_list.xml
@@ -61,10 +61,25 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_booking_list"
-        android:paddingBottom="50dp"
-        android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:padding="5dp"/>
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/rv_booking_list"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1"-->
+<!--        android:nestedScrollingEnabled="false"-->
+<!--        android:padding="5dp"/>-->
+
+    <ProgressBar
+        android:id="@+id/pb_bottom_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
 
 </LinearLayout>
